# bevy-diagnostics-explorer

./: .gitignore  Cargo.toml  LICENSE  README.md
.trunk/: trunk.yaml
src/: data_format_v1.rs  lib.rs  types.rs
vscode-extension/: .gitignore  CHANGELOG.md  README.md  extension.vsix  package.json
vscode-extension/src/: dataFormatV1.ts  extension.ts  treeViewDiagnostics.ts  treeViewHelp.ts
