[package]
name = "bevy_diagnostics_explorer"
authors = ["Vladimir Zaytsev <vladimir.zaytsev.m@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Bevy plugin that provides provides diagnostics into VSCode extension"
license = "Apache-2.0"
exclude = [
    "vscode-extension"
]

[dependencies]
bevy_utils = "0.10.1"
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
byteorder = "1.4.3"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
base64 = "0.21.0"
crossbeam-channel = "0.5.8"
actix-web = "4.3.1"
hashbrown = "0.13.2"
